; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_memguard.c_memguard_cmp_mtp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_memguard.c_memguard_cmp_mtp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malloc_type = type { i32 }

@vm_memguard_desc = common dso_local global i32 0, align 4
@vm_memguard_mtype = common dso_local global %struct.malloc_type* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memguard_cmp_mtp(%struct.malloc_type* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.malloc_type*, align 8
  %5 = alloca i64, align 8
  store %struct.malloc_type* %0, %struct.malloc_type** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = call i64 @memguard_cmp(i64 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %18

10:                                               ; preds = %2
  %11 = load %struct.malloc_type*, %struct.malloc_type** %4, align 8
  %12 = getelementptr inbounds %struct.malloc_type, %struct.malloc_type* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @vm_memguard_desc, align 4
  %15 = call i64 @strcmp(i32 %13, i32 %14)
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i32
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %10, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @memguard_cmp(i64) #1

declare dso_local i64 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
